@@ -1,3 +1,6 @@
+2014-05-19  Kirit Saelensminde  <kirit@felspar.com>
+ Change the way that `boost::filesystem::wpath` instances are converted from strings in order to fix a Boost bug on Android.
+
 2014-05-16  Kirit Saelensminde  <kirit@felspar.com>
  Add in a JSON setting store, `fostlib::settings`. Add `-j` default command line switch so that it can be used rather than an INI file.
 
